# flashcards

./: README.md  app.js  conjugations.js  data.js  index.html  pyproject.toml  scrape_conjugations.py  styles.css
conjugation_data/: verbs_top_250.txt
