[tool.poetry]
name = "portuguese-conjugation-scraper"
version = "0.1.0"
description = "Scraper for Portuguese verb conjugations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.8.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
